fix alignment in formatter view

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -147,6 +147,7 @@
     border-spacing: 10px 0;
     dd, dt {
       display: table-cell;
+      vertical-align: top;
     }
   }
 
